# bazel_xpack_gcc

./: .gitignore  LICENSE  MODULE.bazel  README.md  registry.bzl  rules.bzl
.github/workflows/: xpack-gcc.yml
Examples/: .bazelrc  MODULE.bazel
Examples/HelloWorld/: BUILD.bazel  main.cpp
templates/: BUILD.bazel.tpl  BUILD.compiler.bazel.tpl  vscode.bzl.tpl
