""

# buildifier: disable=module-docstring
module(
    name = "bazel_xpack_gcc_examples",
    version = "0.1",
)

bazel_dep(name = "rules_cc", version = "0.0.10")
bazel_dep(name = "platforms", version = "0.0.10")

git_override(module_name="bazel_utilities", remote="https://github.com/0-Sacha/bazel_utilities.git", commit="fbb17685ac9ba78fef914a322e6c37839dc16d4f")

# Replace with git_override from my repo `https://github.com/0-Sacha/bazel_xpack_gcc.git`
local_path_override(module_name = "bazel_xpack_gcc", path = "../")

bazel_dep(name = "bazel_utilities", version = "0.0.1", dev_dependency = True)
bazel_dep(name = "bazel_xpack_gcc", version = "0.0.1", dev_dependency = True)

xpack_gcc_toolchain_extension = use_extension("@bazel_xpack_gcc//:rules.bzl", "xpack_gcc_toolchain_extension", dev_dependency = True)
inject_repo(xpack_gcc_toolchain_extension, "platforms", "bazel_utilities")
xpack_gcc_toolchain_extension.xpack_gcc_toolchain(name = "xpack_gcc")
use_repo(xpack_gcc_toolchain_extension, "xpack_gcc")
# register_toolchains("@xpack_gcc//:toolchain")
